--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ body {
     border: 5px solid #27ae60;
     box-shadow: 0 0 20px rgba(39, 174, 96, 0.7);
 }
+.pfp:hover{
+    transform: scale(1.5);
+}
 
 /* Button */
 .btn {
@@ -66,6 +69,7 @@ body {
 
 .btn:hover {
     background-color: #219150;
+    transform: scale(1.0);
 }
 
 /* Education Section */
@@ -88,7 +92,9 @@ body {
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
     width: 250px;
 }
-
+.education-item:hover{
+    transform:scale(1.2) ;
+}
 /* Social Icons */
 .social-icons img {
     width: 40px;
@@ -136,6 +142,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.projects:hover{
+    transform: scale(0.9);
 }
 .contact{
     display: flex;
